Added name to page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
 
     <div class="text">
-      <h1>Welcome user!</h1>
+      <h1>Welcome to Slade Berryman's game!</h1>
 
       <h3>Find and defeat Green Goblin!</h3>
       <br>
