--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- I gave the html better structure and used percentages, 
+<!-- I gave the html better structure and used percentages for scale, 
   made the styles look more appealing, and changed the game so that spidey can defeat a foe -->
 <html lang="en" >
   <head>
