--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 
     <div class="text">
       <h1>Welcome to Slade Berryman's game!</h1>
-
-      <h3>Find and defeat Green Goblin!</h3>
-      <br>
-      <h4 id="message-display">Drag the Spideys to the foe to defeat him!</h4>
+      <h4 id="message-display">Find Green Goblin and drag the web-heads to defeat him!</h4>
     </div>
 
     <img src="https://i.imgflip.com/3eqjd8.jpg" alt="no way, homie" class="rounded" id="meme" draggable="true">
